@@ -3,6 +3,7 @@ package com.safar_zone_backend.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.util.StringUtils;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
@@ -13,40 +14,30 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${app.cors.allowed-origins}")
+    @Value("${app.cors.allowed-origins:*}")
     private String allowedOrigins;
 
     @Bean
     public CorsFilter corsFilter() {
-
         CorsConfiguration config = new CorsConfiguration();
 
-        List<String> origins =
-                Arrays.asList(allowedOrigins.split(","));
-
-        config.setAllowedOriginPatterns(origins);
+        if (StringUtils.hasText(allowedOrigins) && !allowedOrigins.equals("*")) {
+            List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                    .map(String::trim)
+                    .toList();
+            config.setAllowedOriginPatterns(origins);
+            config.setAllowCredentials(true); // Enabled for specific origins
+        } else {
+            // Safe fallback for Wildcard '*' (Mobile Apps / Expo Go testing)
+            config.setAllowedOriginPatterns(List.of("*"));
+            config.setAllowCredentials(false);
+        }
 
         config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setExposedHeaders(List.of("Authorization", "Content-Type"));
 
-        config.setAllowedMethods(List.of(
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "OPTIONS",
-                "PATCH"
-        ));
-
-        config.setAllowCredentials(true);
-
-        config.setExposedHeaders(List.of(
-                "Authorization",
-                "Content-Type"
-        ));
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
         return new CorsFilter(source);
